# mimop

./: README.md  pyproject.toml  requirements.txt  run_controller.sh  setup.sh  test_mimop.py
controllers/mimomop_controller/: main.py  mimomop_controller.py
controllers/mimomop_controller/brain/: memory_manager.py  mimomop_brain.py
controllers/mimomop_controller/core/: robot_interface.py
controllers/mimomop_controller/personality/: personality_system.py
protos/: MiMoMop.proto
worlds/: .mimomop_dev.wbproj  mimomop_dev.wbt
