[project]
name = "mimop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "opencv-python>=4.13.0.90",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "websockets>=16.0",
]
